--- a/discipline.html
+++ b/discipline.html
@@ -6,9 +6,7 @@
          <p style="color:rgb(68, 160, 160)">   1 : to punish or penalize for the sake of enforcing obedience and perfecting  moral character.<br> <br> 2 : to train or develop by instruction and exercise especially in self-control.<br> <br> 3a : to bring (a group) under control discipline troops.<br> <br> b : to impose order upon serious writers discipline and refine their writing styles.</p>
          <ul>
             
-            <li><a href="./discipline.html">DISCIPLINE</a></li>
-            <li><a href="./respect.html">RESPECT</a></li>
-            <li><a href="./eduction.html">EDUCATION</a></li>
+            <span><h3> <li style="color:black"><a href="./index.html">BACK</a></li></h3></span>
         </ul>
     </body>
 </html>
