--- a/eduction.html
+++ b/eduction.html
@@ -7,9 +7,7 @@
         <p style="color:rgb(170, 57, 57);">   Education is both the act of teaching knowledge to others and the act of receiving knowledge from someone else.<br> <br> Education also refers to the knowledge received through schooling or instruction and to the institution of teaching as a whole.   </p>
         <ul>
             
-            <li><a href="./discipline.html">DISCIPLINE</a></li>
-            <li><a href="./respect.html">RESPECT</a></li>
-            <li><a href="./eduction.html">EDUCATION</a></li>
+           <span><h3> <li style="color:black"><a href="./index.html">BACK</a></li></h3></span>
         </ul>
     </body>
 </html>
