--- a/respect.html
+++ b/respect.html
@@ -6,9 +6,7 @@
         <p style="color:rgb(51, 129, 51)">   Respect means that you accept somebody for who they are, even when they're different from you or you don't agree with them.<br> <br> Respect in your relationships builds feelings of trust, safety, and wellbeing. <br> <br> Respect doesn't have to come naturally – it is something you learn.</p>
         <ul>
             
-            <li><a href="./discipline.html">DISCIPLINE</a></li>
-            <li><a href="./respect.html">RESPECT</a></li>
-            <li><a href="./eduction.html">EDUCATION</a></li>
+            <span><h3> <li style="color:black"><a href="./index.html">BACK</a></li></h3></span>
         </ul>
     </body>
 </html>
