--- a/demo.html
+++ b/demo.html
@@ -19,14 +19,16 @@
             </li>
             <li><a href="#">Contacts</a>
         <ul>
-            <li><a href="#">Teams</a></li>
-            <li><a href="#">Clients</a></li>
-            <li><a href="#">career</a></li>
-            <li><a href="#">Legacy</a></li>
-
+            <li><a href="#">gmail</a></li>
+            <li><a href="#">phone</a></li>
+            <li><a href="#">twitter</a></li>
+            <li><a href="#">linkedin</a></li>
+        </ul>
             </li>
-            <li><a href="#">Services</a></li>
+        <ul>
+            <li><a href="#">Services</a>
             <li><a href="#">News</a></li>
+            </li>
         </ul>
 
         
